fixed spacing

--- a/css/main.css
+++ b/css/main.css
@@ -41,7 +41,7 @@ h2 {
   color: #fff;
   font-size: 4rem;
   line-height: 1.4em;
-  font-weight: bolder;
+  font
 }
 
 p {
